--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 }
 #colr{
   width: 255px;
+  padding-bottom: 5px;
 }
 .slider_container{
   padding: 5px 0;
@@ -39,17 +40,15 @@ input[type="range"]{
   height: 9px;
   display: inline-block;
 }
-.hex{
+.color_box{
+  display: block;
+  width: 100%;
+  height: 40px;
   background-color: transparent;
   border: none;
   color: #fff;
   font-weight: bold;
-  padding: 5px 10px 10px;
+  text-align: center;
   outline: none;
   font-size: 1em;
-  text-align: left;
-}
-.color_box{
-  width: 100%;
-  height: 40px;
 }
